fix bug: overflow scroll for main

--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@ body {
   }
   .App main {
     padding: 10px;
+    overflow-y: scroll;
   }
   .App main > h1 {
     display: none;
